adicionando titulo e valores as camisas

--- a/categorias.html
+++ b/categorias.html
@@ -60,7 +60,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src= "img/Camisa marrom.jpeg" alt="Camisa preta">
                     <div class="card-body">
-                        <h5 class="card-title">Camisa marrom</h5>
+                        <h5 class="card-title">Camiseta Eco Sustentável Marrom terra</h5>
                         <p class="card-text">Preço: 39,99</p>
                         <a href="/detalheroupa.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
@@ -70,8 +70,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/Camisa preta.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Camisa preta</h5>
-                        <p class="card-text">Preço: 39,99</p>
+                        <h5 class="card-title">Camiseta Eco Sustentável Preta</h5>
+                        <p class="card-text">Preço: 49,99</p>
                         <a href="/detalheroupa.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
@@ -80,8 +80,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/Camisa verde.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Camisa verde</h5>
-                        <p class="card-text">Preço: 39,99</p>
+                        <h5 class="card-title">Camiseta Eco Sustentável Verde folha</h5>
+                        <p class="card-text">Preço: 69,99</p>
                         <a href="/detalheroupa.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
