--- a/categorias.html
+++ b/categorias.html
@@ -93,9 +93,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./img/Produto 1.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h5 class="card-title">Kit para pele simple organic</h5>
+                        <p class="card-text">Preço: 180,00</p>
                         <a href="/detalhebeleza.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
@@ -104,9 +103,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./img/Produto 2.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h5 class="card-title">Espuma facial simple organic</h5>
+                        <p class="card-text">Preço: 49,50</p>
                         <a href="/detalhebeleza.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
@@ -115,9 +113,8 @@
                 <div class="card" style="width: 18rem;">
                     <video src="./img/produto 3.mp4"></video>
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h5 class="card-title">Base natural simple organic</h5>
+                        <p class="card-text">Preço: 79,50</p>
                         <a href="/detalhebeleza.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
@@ -129,9 +126,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./img/espelho.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h5 class="card-title">Espelho Grande de Design Orgânico</h5>
+                        <p class="card-text">Preço: 434,00</p>
                         <a href="/detalhecasa.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
@@ -140,9 +136,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./img/toalha de cozinha.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h5 class="card-title">Toalhas de cozinha sem papel</h5>
+                        <p class="card-text">Preço: 48,00</p>
                         <a href="/detalhecasa.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
@@ -151,9 +146,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./img/tapete.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h5 class="card-title">Tapete de fibra de coco personalizado</h5>
+                        <p class="card-text">Preço: 159,00</p>
                         <a href="/detalhecasa.html" class="btn btn-primary">Adicionar ao carrinho</a>
                     </div>
                 </div>
