--- a/categorias.html
+++ b/categorias.html
@@ -39,13 +39,13 @@
             <div class="column align-items-start">
                 FILTROS
               <div class="col">
-                <a href="#" class="btn btn-primary">Preço</a>
+                <a href="#" class="btn btn-dark">Preço</a>
               </div>
               <div class="col">
-                <a href="#" class="btn btn-primary">Marca</a>
+                <a href="#" class="btn btn-dark">Marca</a>
               </div>
               <div class="col">
-                <a href="#" class="btn btn-primary">Tipos</a>
+                <a href="#" class="btn btn-dark">Tipos</a>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Camiseta Eco Sustentável Marrom terra</h5>
                         <p class="card-text">Preço: 39,99</p>
-                        <a href="/detalheroupa.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/roupamarrom.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Camiseta Eco Sustentável Preta</h5>
                         <p class="card-text">Preço: 49,99</p>
-                        <a href="/detalheroupa.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/roupapreta.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Camiseta Eco Sustentável Verde folha</h5>
                         <p class="card-text">Preço: 69,99</p>
-                        <a href="/detalheroupa.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/roupaverde.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Kit para pele simple organic</h5>
                         <p class="card-text">Preço: 180,00</p>
-                        <a href="/detalhebeleza.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/belezaskincare.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Espuma facial simple organic</h5>
                         <p class="card-text">Preço: 49,50</p>
-                        <a href="/detalhebeleza.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/belezaespuma.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Base natural simple organic</h5>
                         <p class="card-text">Preço: 79,50</p>
-                        <a href="/detalhebeleza.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/belezaskin.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Espelho Grande de Design Orgânico</h5>
                         <p class="card-text">Preço: 434,00</p>
-                        <a href="/detalhecasa.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/casaespelho.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Toalhas de cozinha sem papel</h5>
                         <p class="card-text">Preço: 48,00</p>
-                        <a href="/detalhecasa.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/casatoalha.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Tapete de fibra de coco personalizado</h5>
                         <p class="card-text">Preço: 159,00</p>
-                        <a href="/detalhecasa.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <a href="/casatapete.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
@@ -157,34 +157,31 @@
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top imagem-produto" alt="...">
+                    <img src="img/painel_solar_.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="/detalhetec.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <h5 class="card-title">Painel Solar</h5>
+                        <p class="card-text">R$ 599,99</p>
+                        <a href="/tecpainelsolar.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top imagem-produto" alt="...">
+                    <img src="img/carregador.jpeg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="/detalhetec.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <h5 class="card-title">Carregador Portátil</h5>
+                        <p class="card-text">R$ 3.500</p>
+                        <a href="/teccarregador.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top imagem-produto" alt="...">
+                    <img src="img/byd-seal.jpg" class="card-img-top imagem-produto" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="/detalhetec.html" class="btn btn-primary">Adicionar ao carrinho</a>
+                        <h5 class="card-title">Carro Elétrico</h5>
+                        <p class="card-text">R$ 296.800</p>
+                        <a href="/tecbyd.html" class="btn btn-dark">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </div>
