--- a/roupamarrom.html
+++ b/roupamarrom.html
@@ -41,8 +41,7 @@
             <h4 class="text-success">R$ 39,99</h4>
 
             <p class="mt-3">
-                Descrição do produto. Aqui você pode adicionar informações detalhadas sobre o item, 
-                como características, funcionalidades e outros pontos importantes.
+                Camiseta Em Algodão Estampa Rodeo Country Ranch Verde
             </p>
 
             <div class="opcoes-compra">
