--- a/roupapreta.html
+++ b/roupapreta.html
@@ -42,8 +42,7 @@
             <h4 class="text-success">R$ 49,99</h4>
 
             <p class="mt-3">
-                Descrição do produto. Aqui você pode adicionar informações detalhadas sobre o item, 
-                como características, funcionalidades e outros pontos importantes.
+                Camiseta Comfort Básica Em Algodão Peruano Preto
             </p>
 
             <div class="opcoes-compra">
