--- a/roupaverde.html
+++ b/roupaverde.html
@@ -42,8 +42,7 @@
             <h4 class="text-success">R$ 69,99</h4>
 
             <p class="mt-3">
-                Descrição do produto. Aqui você pode adicionar informações detalhadas sobre o item, 
-                como características, funcionalidades e outros pontos importantes.
+                Camiseta Casual Em Algodão Com Gola Redonda Verde Olivas.
             </p>
 
             <div class="opcoes-compra">
