Trocas dos cards

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
             Maquiagens
         </div>
         <div class="card-body">
-            <h5 class="card-title">Roupa de lã renovavel</h5>
-            <p class="card-text">Sinta-se seguro e confortavel usando uma de nossas roupas especiais feitas de lã
-                renovavel e com ação anti-suor!</p>
+            <h5 class="card-title">Maquiagens E Cuidados</h5>
+            <p class="card-text">Para quem gosta de se sentir bonita e confiante na hora de sair</p>
             <p class="card-text">Veja mais produtos aqui!</p>
             <a href="/categorias.html" class="btn btn-primary">Produtos</a>
         </div>
@@ -93,9 +92,10 @@
             Acessórios de casa
         </div>
         <div class="card-body">
-            <h5 class="card-title">Roupa de lã renovavel</h5>
-            <p class="card-text">Sinta-se seguro e confortavel usando uma de nossas roupas especiais feitas de lã
-                renovavel e com ação anti-suor!</p>
+            <h5 class="card-title">Objetos Para Casa</h5>
+            <p class="card-text">Se você está sentindo que sua casa não está muito aconchegante, sinta-se a vontade
+                para procurar o que deseja
+            </p>
             <p class="card-text">Veja mais produtos aqui!</p>
             <a href="/categorias.html" class="btn btn-primary">Produtos</a>
         </div>
@@ -106,9 +106,8 @@
             green technology
         </div>
         <div class="card-body">
-            <h5 class="card-title">Roupa de lã renovavel</h5>
-            <p class="card-text">Sinta-se seguro e confortavel usando uma de nossas roupas especiais feitas de lã
-                renovavel e com ação anti-suor!</p>
+            <h5 class="card-title">Tecnologia Verde</h5>
+            <p class="card-text">Tecnologia para quem se importa com o meio ambiente e está consciente de seus atos</p>
             <p class="card-text">Veja mais produtos aqui!</p>
             <a href="/categorias.html" class="btn btn-primary">Produtos</a>
         </div>
