--- a/CP4Front-main1/categorias.html
+++ b/CP4Front-main1/categorias.html
@@ -39,16 +39,16 @@
             <div class="column align-items-start">
                 FILTROS
                 <div class="col">
-                    <a href="#" class="btn btn-dark">Roupa</a>
+                    <a href="#Roupas" class="btn btn-dark">Roupas</a>
                   </div>
                   <div class="col">
-                    <a href="#" class="btn btn-dark">Beleza</a>
+                    <a href="#Beleza" class="btn btn-dark">Beleza</a>
                   </div>
                   <div class="col">
-                    <a href="#" class="btn btn-dark">Casa</a>
+                    <a href="#Casa" class="btn btn-dark">Casa</a>
                   </div>
                   <div class="col">
-                    <a href="#" class="btn btn-dark">Tech</a>
+                    <a href="#Tech" class="btn btn-dark">Tech</a>
                   </div>
             </div>
           </div>
@@ -57,7 +57,7 @@
     
     <div class="container text-center contcategoria">
         <h1>Tabela de produtos</h1>
-        <h3 class="nomerow">Roupas</h3>
+        <h3 id="Roupas"class="nomerow">Roupas</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="nomerow">Beleza</h3>
+        <h3 id="Beleza" class="nomerow">Beleza</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="nomerow">Casa</h3>
+        <h3 id="Casa" class="nomerow">Casa</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
@@ -156,7 +156,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="nomerow">Tech</h3>
+        <h3 id="Tech" class="nomerow">Tech</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
