--- a/categorias.html
+++ b/categorias.html
@@ -38,15 +38,18 @@
         <div class="container text-center">
             <div class="column align-items-start">
                 FILTROS
-              <div class="col">
-                <a href="#" class="btn btn-dark">Preço</a>
-              </div>
-              <div class="col">
-                <a href="#" class="btn btn-dark">Marca</a>
-              </div>
-              <div class="col">
-                <a href="#" class="btn btn-dark">Tipos</a>
-              </div>
+                <div class="col">
+                    <a href="#Roupas" class="btn btn-dark">Roupas</a>
+                  </div>
+                  <div class="col">
+                    <a href="#Beleza" class="btn btn-dark">Beleza</a>
+                  </div>
+                  <div class="col">
+                    <a href="#Casa" class="btn btn-dark">Casa</a>
+                  </div>
+                  <div class="col">
+                    <a href="#Tech" class="btn btn-dark">Tech</a>
+                  </div>
             </div>
           </div>
     </aside>
@@ -54,7 +57,7 @@
     
     <div class="container text-center contcategoria">
         <h1>Tabela de produtos</h1>
-        <h3 class="nomerow">Roupas</h3>
+        <h3 id="Roupas"class="nomerow">Roupas</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
@@ -87,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="nomerow">Beleza</h3>
+        <h3 id="Beleza" class="nomerow">Beleza</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
@@ -120,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="nomerow">Casa</h3>
+        <h3 id="Casa" class="nomerow">Casa</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
@@ -153,7 +156,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="nomerow">Tech</h3>
+        <h3 id="Tech" class="nomerow">Tech</h3>
         <div class="row linha">
             <div class="col">
                 <div class="card" style="width: 18rem;">
